[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/amon_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/pages/adventure/scenes/ChapterChoice.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 2

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.92549, 0.929412, 0.94902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.760784, 0.666667, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.956863, 0.345098, 0.345098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[node name="ChapterChoice" type="Panel"]
margin_right = 446.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
mouse_filter = 1
custom_styles/panel = SubResource( 9 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NBChapitre" type="Label" parent="."]
margin_left = 322.267
margin_top = 19.7775
margin_right = 364.267
margin_bottom = 54.7775
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "XXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="special" type="Label" parent="."]
visible = false
margin_left = 166.0
margin_top = 55.0
margin_right = 363.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0.760784, 0.666667, 1 )
custom_fonts/font = SubResource( 2 )
text = "XXX"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 163.0
margin_top = 2.0
margin_right = 333.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0.760784, 0.666667, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="Panel" parent="."]
margin_left = 368.903
margin_top = 9.47194
margin_right = 425.903
margin_bottom = 66.4719
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="special" type="Panel" parent="click"]
visible = false
margin_right = 58.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="special_wrong" type="Panel" parent="click"]
visible = false
margin_right = 58.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="click"]
margin_left = 19.356
margin_top = 1.61726
margin_right = 59.356
margin_bottom = 49.6173
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="click"]
margin_left = -1.0
margin_top = -1.0
margin_right = 57.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlreadySeenPolygon" type="Polygon2D" parent="."]
position = Vector2( -22.5136, 0.529732 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 22.4823, 72.5328, 37.1073, 72.564, 58.1034, -0.244655, 41.6874, -0.262193, 22.5453, 67.939 )

[node name="Label" type="Label" parent="AlreadySeenPolygon"]
margin_left = 26.3216
margin_top = 57.7255
margin_right = 75.3216
margin_bottom = 71.7255
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Déjà Vu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SessionSeenPolygon" type="Polygon2D" parent="."]
position = Vector2( 2.07602, 0.578602 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 21.4577, 72.3413, 41.6251, -0.0815163, 58.0468, -0.0815163, 37.1673, 72.4201 )

[node name="Label" type="Label" parent="SessionSeenPolygon"]
margin_left = 25.6534
margin_top = 57.5028
margin_right = 74.6534
margin_bottom = 71.5028
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ce Billy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatPolygon" type="Polygon2D" parent="."]
position = Vector2( 25.5788, 0.544044 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 21.2241, 72.4153, 41.6251, -0.0815163, 58.0468, -0.0815163, 37.17, 72.494 )

[node name="Label" type="Label" parent="CombatPolygon"]
margin_left = 25.4307
margin_top = 57.2801
margin_right = 74.4307
margin_bottom = 71.2801
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Combat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndPolygon" type="Polygon2D" parent="."]
position = Vector2( 50.2198, 0.531052 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 21.2697, 72.5464, 41.6251, -0.0815163, 58.0468, -0.0815163, 37.2155, 72.507 )

[node name="Label" type="Label" parent="EndPolygon"]
margin_left = 25.6534
margin_top = 58.6164
margin_right = 74.6534
margin_bottom = 72.6164
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Fin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessPolygon" type="Polygon2D" parent="."]
position = Vector2( 74.9835, 0.592384 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 21.2713, 72.3275, 41.6251, -0.0815163, 58.0468, -0.0815163, 37.2565, 72.3669 )

[node name="Label" type="Label" parent="SuccessPolygon"]
margin_left = 26.3216
margin_top = 56.6119
margin_right = 75.3216
margin_bottom = 70.6119
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Succès"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretPolygon" type="Polygon2D" parent="."]
position = Vector2( 99.7867, 0.448215 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 20.902, 72.4675, 41.6251, -0.0815163, 58.0468, -0.0815163, 37.2723, 72.4675 )

[node name="Label" type="Label" parent="SecretPolygon"]
margin_left = 26.3805
margin_top = 57.0445
margin_right = 75.3805
margin_bottom = 71.0445
rect_rotation = -73.2716
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Secret"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="click/Button" to="." method="_on_Button_pressed"]
